# cf-worker-get-request-data

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs
src/assets/html/: index.html
